src/ui/snapshots/rusty_riff__ui__draw__tests__practice_pane.snap
---
source: src/ui/draw.rs
expression: shown
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  AMP ──▶ CAB ──▶ OUTPUT                                                                                              IN uncal▐░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ··◇                 ◇··                ·◇·        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                · ◇                 ◇ ·                · ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.0            MID 0.0          TREBLE 6.5         PRESENCE 4.0        MASTER 5.5     ┃┃     MIC 4.0        BLEND 0.0        ROOM 0.0    ┃
┃                                                                                                                     ┃┃                                                 ┃
┃                                                                                                                     ┃┃                                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ T I M E L I N E ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ⏸      00:00 / 00:00  5s loop                                                                                                                                         │
│no tracks — press B to import, R to record a raw take                                                                                                                   │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│                                                                                                                                                                        │
│3 focus the timeline  ·  B import  ·  R record                                                                                                                          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ GUITAR RIG ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ + ADD ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
││                                                                                  ＋                                                                                   ││
│└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
││├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤││
││SELECT A PEDAL — ←→                                                                                                                                                   ││
││                                                             Press 4 for the pedalboard, 1 for the chain.                                                             ││
││                                                                                                                                                                      ││
││                                                                                                                                                                      ││
││                                                                                                                                                                      ││
││                                                                                                                                                                      ││
│└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                           K keybindings  Q quit
