src/ui/snapshots/rusty_riff__ui__draw__tests__preset_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                               IN uncal▐░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ··◇                 ◇··                ·◇·        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                · ◇                 ◇ ·                · ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.╔ P R E S E T S ═════════════════════════════════════════════════════════════════════════════════════╗    BLEND 0.0        ROOM 0.0    ┃
┃                                 ║  Default values                                                                                    ║                                 ┃
┃                                 ║  Clean Combo  sparkly cleans                                                                       ║                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║▶ My Lead  saved rig  [user]                                                                        ║▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────║                                                                                                    ║─────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────║                                                                                                    ║────────────────────────────────┐│
││                2.0  3.0        ║                                                                                                    ║           ＋                    ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
││├───────────────────────────────║                                                                                                    ║───────────────────────────────┤││
││SELECT A PEDAL — ←→             ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
└─────────────────────────────────║                                                                                                    ║─────────────────────────────────┘
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║           ↑/↓ navigate  Enter apply  S save  E export  I import  D delete  Esc / P close           ║                                  
                                  ║                                            ● user preset                                           ║                                  
                                  ╚════════════════════════════════════════════════════════════════════════════════════════════════════╝
