src/ui/snapshots/rusty_riff__ui__draw__tests__save_preset_dialog.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                               IN uncal▐░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ··◇                 ◇··                ·◇·        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                · ◇                 ◇ ·                · ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.0   ╔ S A V E   P R E S E T ════════════════════════════════════════════════════════════════════╗0        BLEND 0.0        ROOM 0.0    ┃
┃                                     ║Name:                                                                                      ║                                      ┃
┃                                     ║My Lead█                                                                                   ║                                      ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║───────────────────────────────────────────────────────────────────────────────────────────║▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                           ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────────║Description (optional):                                                                    ║──────────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────────║warm mid-gain                                                                              ║ADD ─────────────────────────────────┐│
││                2.0  3.0            ║───────────────────────────────────────────────────────────────────────────────────────────║                ＋                    ││
│└────────────────────────────────────║                                                                                           ║─────────────────────────────────────┘│
││├───────────────────────────────────║                                                                                           ║────────────────────────────────────┤││
││SELECT A PEDAL — ←→                 ║                                                                                           ║                                     ││
││                                    ║                                                                                           ║                                     ││
││                                    ║                                                                                           ║                                     ││
││                                    ║                                                                                           ║                                     ││
││                                    ║                                                                                           ║                                     ││
││                                    ║                                                                                           ║                                     ││
│└────────────────────────────────────║                                                                                           ║─────────────────────────────────────┘│
└─────────────────────────────────────║                                                                                           ║──────────────────────────────────────┘
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                          Tab next field  Enter save  Esc cancel                           ║                                       
                                      ╚═══════════════════════════════════════════════════════════════════════════════════════════╝
